parser/y.output

state 0
	$accept: .contract_declaration $end 

	CONTRACT  shift 2
	.  error

	contract_declaration  goto 1

state 1
	$accept:  contract_declaration.$end 
	contract_declaration:  contract_declaration.NEWLINE 

	$end  accept
	NEWLINE  shift 3
	.  error


state 2
	contract_declaration:  CONTRACT.IDENT LBRACE NEWLINE contract_body RBRACE 

	IDENT  shift 4
	.  error


state 3
	contract_declaration:  contract_declaration NEWLINE.    (70)

	.  reduce 70 (src line 237)


state 4
	contract_declaration:  CONTRACT IDENT.LBRACE NEWLINE contract_body RBRACE 

	LBRACE  shift 5
	.  error


state 5
	contract_declaration:  CONTRACT IDENT LBRACE.NEWLINE contract_body RBRACE 

	NEWLINE  shift 6
	.  error


state 6
	contract_declaration:  CONTRACT IDENT LBRACE NEWLINE.contract_body RBRACE 
	contract_data: .    (66)

	DATA  shift 9
	.  reduce 66 (src line 221)

	contract_data  goto 8
	contract_body  goto 7

state 7
	contract_declaration:  CONTRACT IDENT LBRACE NEWLINE contract_body.RBRACE 

	RBRACE  shift 10
	.  error


state 8
	contract_body:  contract_data.statements 
	statements: .    (6)

	.  reduce 6 (src line 123)

	statements  goto 11

state 9
	contract_data:  DATA.LBRACE NEWLINE var_declarations NEWLINE RBRACE NEWLINE 

	LBRACE  shift 12
	.  error


state 10
	contract_declaration:  CONTRACT IDENT LBRACE NEWLINE contract_body RBRACE.    (69)

	.  reduce 69 (src line 232)


state 11
	statements:  statements.NEWLINE 
	statements:  statements.statement NEWLINE 
	contract_body:  contract_data statements.    (68)

	IDENT  shift 23
	CALL  shift 21
	CALLCONTRACT  shift 22
	NEWLINE  shift 13
	IF  shift 17
	RETURN  shift 18
	WHILE  shift 19
	FUNC  shift 20
	T_INT  shift 25
	T_BOOL  shift 24
	T_STR  shift 26
	.  reduce 68 (src line 226)

	type  goto 16
	var  goto 15
	statement  goto 14

state 12
	contract_data:  DATA LBRACE.NEWLINE var_declarations NEWLINE RBRACE NEWLINE 

	NEWLINE  shift 27
	.  error


state 13
	statements:  statements NEWLINE.    (7)

	.  reduce 7 (src line 125)


state 14
	statements:  statements statement.NEWLINE 

	NEWLINE  shift 28
	.  error


state 15
	statement:  var.ASSIGN expr 
	statement:  var.ADD_ASSIGN expr 
	statement:  var.SUB_ASSIGN expr 
	statement:  var.MUL_ASSIGN expr 
	statement:  var.DIV_ASSIGN expr 
	statement:  var.MOD_ASSIGN expr 

	ADD_ASSIGN  shift 30
	SUB_ASSIGN  shift 31
	MUL_ASSIGN  shift 32
	DIV_ASSIGN  shift 33
	MOD_ASSIGN  shift 34
	ASSIGN  shift 29
	.  error


state 16
	statement:  type.IDENT ASSIGN expr 
	statement:  type.ident_list 

	IDENT  shift 35
	.  error

	ident_list  goto 36

state 17
	statement:  IF.expr LBRACE statements RBRACE elif else 

	IDENT  shift 46
	CALL  shift 44
	CALLCONTRACT  shift 45
	INT  shift 39
	STRING  shift 40
	QSTRING  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LPAREN  shift 38
	QUESTION  shift 47
	SUB  shift 48
	NOT  shift 49
	.  error

	expr  goto 37

state 18
	statement:  RETURN.    (26)
	statement:  RETURN.expr 

	IDENT  shift 46
	CALL  shift 44
	CALLCONTRACT  shift 45
	INT  shift 39
	STRING  shift 40
	QSTRING  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LPAREN  shift 38
	QUESTION  shift 47
	SUB  shift 48
	NOT  shift 49
	.  reduce 26 (src line 158)

	expr  goto 50

state 19
	statement:  WHILE.expr LBRACE statements RBRACE 

	IDENT  shift 46
	CALL  shift 44
	CALLCONTRACT  shift 45
	INT  shift 39
	STRING  shift 40
	QSTRING  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LPAREN  shift 38
	QUESTION  shift 47
	SUB  shift 48
	NOT  shift 49
	.  error

	expr  goto 51

state 20
	statement:  FUNC.CALL par_declarations RPAREN rettype LBRACE statements RBRACE 

	CALL  shift 52
	.  error


state 21
	statement:  CALL.params RPAREN 
	params: .    (9)

	IDENT  shift 46
	CALL  shift 44
	CALLCONTRACT  shift 45
	INT  shift 39
	STRING  shift 40
	QSTRING  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LPAREN  shift 38
	QUESTION  shift 47
	SUB  shift 48
	NOT  shift 49
	.  reduce 9 (src line 129)

	params  goto 53
	expr  goto 54

state 22
	statement:  CALLCONTRACT.RPAREN 

	RPAREN  shift 55
	.  error


state 23
	var:  IDENT.    (12)

	.  reduce 12 (src line 135)


state 24
	type:  T_BOOL.    (1)

	.  reduce 1 (src line 112)


state 25
	type:  T_INT.    (2)

	.  reduce 2 (src line 114)


state 26
	type:  T_STR.    (3)

	.  reduce 3 (src line 115)


state 27
	contract_data:  DATA LBRACE NEWLINE.var_declarations NEWLINE RBRACE NEWLINE 

	T_INT  shift 25
	T_BOOL  shift 24
	T_STR  shift 26
	.  error

	type  goto 58
	var_declaration  goto 57
	var_declarations  goto 56

state 28
	statements:  statements statement NEWLINE.    (8)

	.  reduce 8 (src line 126)


state 29
	statement:  var ASSIGN.expr 

	IDENT  shift 46
	CALL  shift 44
	CALLCONTRACT  shift 45
	INT  shift 39
	STRING  shift 40
	QSTRING  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LPAREN  shift 38
	QUESTION  shift 47
	SUB  shift 48
	NOT  shift 49
	.  error

	expr  goto 59

state 30
	statement:  var ADD_ASSIGN.expr 

	IDENT  shift 46
	CALL  shift 44
	CALLCONTRACT  shift 45
	INT  shift 39
	STRING  shift 40
	QSTRING  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LPAREN  shift 38
	QUESTION  shift 47
	SUB  shift 48
	NOT  shift 49
	.  error

	expr  goto 60

state 31
	statement:  var SUB_ASSIGN.expr 

	IDENT  shift 46
	CALL  shift 44
	CALLCONTRACT  shift 45
	INT  shift 39
	STRING  shift 40
	QSTRING  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LPAREN  shift 38
	QUESTION  shift 47
	SUB  shift 48
	NOT  shift 49
	.  error

	expr  goto 61

state 32
	statement:  var MUL_ASSIGN.expr 

	IDENT  shift 46
	CALL  shift 44
	CALLCONTRACT  shift 45
	INT  shift 39
	STRING  shift 40
	QSTRING  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LPAREN  shift 38
	QUESTION  shift 47
	SUB  shift 48
	NOT  shift 49
	.  error

	expr  goto 62

state 33
	statement:  var DIV_ASSIGN.expr 

	IDENT  shift 46
	CALL  shift 44
	CALLCONTRACT  shift 45
	INT  shift 39
	STRING  shift 40
	QSTRING  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LPAREN  shift 38
	QUESTION  shift 47
	SUB  shift 48
	NOT  shift 49
	.  error

	expr  goto 63

state 34
	statement:  var MOD_ASSIGN.expr 

	IDENT  shift 46
	CALL  shift 44
	CALLCONTRACT  shift 45
	INT  shift 39
	STRING  shift 40
	QSTRING  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LPAREN  shift 38
	QUESTION  shift 47
	SUB  shift 48
	NOT  shift 49
	.  error

	expr  goto 64

state 35
	statement:  type IDENT.ASSIGN expr 
	ident_list:  IDENT.    (57)

	ASSIGN  shift 65
	.  reduce 57 (src line 197)


state 36
	statement:  type ident_list.    (24)
	ident_list:  ident_list.IDENT 

	IDENT  shift 66
	.  reduce 24 (src line 156)


state 37
	statement:  IF expr.LBRACE statements RBRACE elif else 
	expr:  expr.MUL expr 
	expr:  expr.DIV expr 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MOD expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.NOT_EQ expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 

	LBRACE  shift 67
	ADD  shift 70
	SUB  shift 71
	MUL  shift 68
	DIV  shift 69
	MOD  shift 72
	AND  shift 73
	OR  shift 74
	EQ  shift 75
	NOT_EQ  shift 76
	LT  shift 79
	GT  shift 80
	LTE  shift 77
	GTE  shift 78
	.  error


state 38
	expr:  LPAREN.expr RPAREN 

	IDENT  shift 46
	CALL  shift 44
	CALLCONTRACT  shift 45
	INT  shift 39
	STRING  shift 40
	QSTRING  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LPAREN  shift 38
	QUESTION  shift 47
	SUB  shift 48
	NOT  shift 49
	.  error

	expr  goto 81

state 39
	expr:  INT.    (33)

	.  reduce 33 (src line 170)


state 40
	expr:  STRING.    (34)

	.  reduce 34 (src line 171)


state 41
	expr:  QSTRING.    (35)

	.  reduce 35 (src line 172)


state 42
	expr:  TRUE.    (36)

	.  reduce 36 (src line 173)


state 43
	expr:  FALSE.    (37)

	.  reduce 37 (src line 174)


state 44
	expr:  CALL.params RPAREN 
	params: .    (9)

	IDENT  shift 46
	CALL  shift 44
	CALLCONTRACT  shift 45
	INT  shift 39
	STRING  shift 40
	QSTRING  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LPAREN  shift 38
	QUESTION  shift 47
	SUB  shift 48
	NOT  shift 49
	.  reduce 9 (src line 129)

	params  goto 82
	expr  goto 54

state 45
	expr:  CALLCONTRACT.RPAREN 

	RPAREN  shift 83
	.  error


state 46
	expr:  IDENT.    (40)

	.  reduce 40 (src line 177)


state 47
	expr:  QUESTION.LPAREN expr COMMA expr COMMA expr RPAREN 

	LPAREN  shift 84
	.  error


state 48
	expr:  SUB.expr 

	IDENT  shift 46
	CALL  shift 44
	CALLCONTRACT  shift 45
	INT  shift 39
	STRING  shift 40
	QSTRING  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LPAREN  shift 38
	QUESTION  shift 47
	SUB  shift 48
	NOT  shift 49
	.  error

	expr  goto 85

state 49
	expr:  NOT.expr 

	IDENT  shift 46
	CALL  shift 44
	CALLCONTRACT  shift 45
	INT  shift 39
	STRING  shift 40
	QSTRING  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LPAREN  shift 38
	QUESTION  shift 47
	SUB  shift 48
	NOT  shift 49
	.  error

	expr  goto 86

state 50
	statement:  RETURN expr.    (27)
	expr:  expr.MUL expr 
	expr:  expr.DIV expr 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MOD expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.NOT_EQ expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 

	ADD  shift 70
	SUB  shift 71
	MUL  shift 68
	DIV  shift 69
	MOD  shift 72
	AND  shift 73
	OR  shift 74
	EQ  shift 75
	NOT_EQ  shift 76
	LT  shift 79
	GT  shift 80
	LTE  shift 77
	GTE  shift 78
	.  reduce 27 (src line 159)


state 51
	statement:  WHILE expr.LBRACE statements RBRACE 
	expr:  expr.MUL expr 
	expr:  expr.DIV expr 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MOD expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.NOT_EQ expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 

	LBRACE  shift 87
	ADD  shift 70
	SUB  shift 71
	MUL  shift 68
	DIV  shift 69
	MOD  shift 72
	AND  shift 73
	OR  shift 74
	EQ  shift 75
	NOT_EQ  shift 76
	LT  shift 79
	GT  shift 80
	LTE  shift 77
	GTE  shift 78
	.  error


state 52
	statement:  FUNC CALL.par_declarations RPAREN rettype LBRACE statements RBRACE 
	par_declarations: .    (60)

	T_INT  shift 25
	T_BOOL  shift 24
	T_STR  shift 26
	.  reduce 60 (src line 206)

	type  goto 90
	par_declaration  goto 89
	par_declarations  goto 88

state 53
	params:  params.COMMA expr 
	statement:  CALL params.RPAREN 

	COMMA  shift 91
	RPAREN  shift 92
	.  error


state 54
	params:  expr.    (10)
	expr:  expr.MUL expr 
	expr:  expr.DIV expr 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MOD expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.NOT_EQ expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 

	ADD  shift 70
	SUB  shift 71
	MUL  shift 68
	DIV  shift 69
	MOD  shift 72
	AND  shift 73
	OR  shift 74
	EQ  shift 75
	NOT_EQ  shift 76
	LT  shift 79
	GT  shift 80
	LTE  shift 77
	GTE  shift 78
	.  reduce 10 (src line 131)


state 55
	statement:  CALLCONTRACT RPAREN.    (31)

	.  reduce 31 (src line 165)


state 56
	var_declarations:  var_declarations.NEWLINE var_declaration 
	contract_data:  DATA LBRACE NEWLINE var_declarations.NEWLINE RBRACE NEWLINE 

	NEWLINE  shift 93
	.  error


state 57
	var_declarations:  var_declaration.    (64)

	.  reduce 64 (src line 216)


state 58
	var_declaration:  type.ident_list 

	IDENT  shift 95
	.  error

	ident_list  goto 94

state 59
	statement:  var ASSIGN expr.    (17)
	expr:  expr.MUL expr 
	expr:  expr.DIV expr 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MOD expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.NOT_EQ expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 

	ADD  shift 70
	SUB  shift 71
	MUL  shift 68
	DIV  shift 69
	MOD  shift 72
	AND  shift 73
	OR  shift 74
	EQ  shift 75
	NOT_EQ  shift 76
	LT  shift 79
	GT  shift 80
	LTE  shift 77
	GTE  shift 78
	.  reduce 17 (src line 148)


state 60
	statement:  var ADD_ASSIGN expr.    (18)
	expr:  expr.MUL expr 
	expr:  expr.DIV expr 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MOD expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.NOT_EQ expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 

	ADD  shift 70
	SUB  shift 71
	MUL  shift 68
	DIV  shift 69
	MOD  shift 72
	AND  shift 73
	OR  shift 74
	EQ  shift 75
	NOT_EQ  shift 76
	LT  shift 79
	GT  shift 80
	LTE  shift 77
	GTE  shift 78
	.  reduce 18 (src line 150)


state 61
	statement:  var SUB_ASSIGN expr.    (19)
	expr:  expr.MUL expr 
	expr:  expr.DIV expr 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MOD expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.NOT_EQ expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 

	ADD  shift 70
	SUB  shift 71
	MUL  shift 68
	DIV  shift 69
	MOD  shift 72
	AND  shift 73
	OR  shift 74
	EQ  shift 75
	NOT_EQ  shift 76
	LT  shift 79
	GT  shift 80
	LTE  shift 77
	GTE  shift 78
	.  reduce 19 (src line 151)


state 62
	statement:  var MUL_ASSIGN expr.    (20)
	expr:  expr.MUL expr 
	expr:  expr.DIV expr 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MOD expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.NOT_EQ expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 

	ADD  shift 70
	SUB  shift 71
	MUL  shift 68
	DIV  shift 69
	MOD  shift 72
	AND  shift 73
	OR  shift 74
	EQ  shift 75
	NOT_EQ  shift 76
	LT  shift 79
	GT  shift 80
	LTE  shift 77
	GTE  shift 78
	.  reduce 20 (src line 152)


state 63
	statement:  var DIV_ASSIGN expr.    (21)
	expr:  expr.MUL expr 
	expr:  expr.DIV expr 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MOD expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.NOT_EQ expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 

	ADD  shift 70
	SUB  shift 71
	MUL  shift 68
	DIV  shift 69
	MOD  shift 72
	AND  shift 73
	OR  shift 74
	EQ  shift 75
	NOT_EQ  shift 76
	LT  shift 79
	GT  shift 80
	LTE  shift 77
	GTE  shift 78
	.  reduce 21 (src line 153)


state 64
	statement:  var MOD_ASSIGN expr.    (22)
	expr:  expr.MUL expr 
	expr:  expr.DIV expr 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MOD expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.NOT_EQ expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 

	ADD  shift 70
	SUB  shift 71
	MUL  shift 68
	DIV  shift 69
	MOD  shift 72
	AND  shift 73
	OR  shift 74
	EQ  shift 75
	NOT_EQ  shift 76
	LT  shift 79
	GT  shift 80
	LTE  shift 77
	GTE  shift 78
	.  reduce 22 (src line 154)


state 65
	statement:  type IDENT ASSIGN.expr 

	IDENT  shift 46
	CALL  shift 44
	CALLCONTRACT  shift 45
	INT  shift 39
	STRING  shift 40
	QSTRING  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LPAREN  shift 38
	QUESTION  shift 47
	SUB  shift 48
	NOT  shift 49
	.  error

	expr  goto 96

state 66
	ident_list:  ident_list IDENT.    (58)

	.  reduce 58 (src line 199)


state 67
	statement:  IF expr LBRACE.statements RBRACE elif else 
	statements: .    (6)

	.  reduce 6 (src line 123)

	statements  goto 97

state 68
	expr:  expr MUL.expr 

	IDENT  shift 46
	CALL  shift 44
	CALLCONTRACT  shift 45
	INT  shift 39
	STRING  shift 40
	QSTRING  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LPAREN  shift 38
	QUESTION  shift 47
	SUB  shift 48
	NOT  shift 49
	.  error

	expr  goto 98

state 69
	expr:  expr DIV.expr 

	IDENT  shift 46
	CALL  shift 44
	CALLCONTRACT  shift 45
	INT  shift 39
	STRING  shift 40
	QSTRING  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LPAREN  shift 38
	QUESTION  shift 47
	SUB  shift 48
	NOT  shift 49
	.  error

	expr  goto 99

state 70
	expr:  expr ADD.expr 

	IDENT  shift 46
	CALL  shift 44
	CALLCONTRACT  shift 45
	INT  shift 39
	STRING  shift 40
	QSTRING  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LPAREN  shift 38
	QUESTION  shift 47
	SUB  shift 48
	NOT  shift 49
	.  error

	expr  goto 100

state 71
	expr:  expr SUB.expr 
